X11-Include.xxxxxxxxxxxxxxxx/X11/extensions/Xrandr.pp


unit Xrandr;
interface

{
  Automatically converted by H2Pas 1.0.0 from /n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/X11/X11-Include/X11/extensions/Xrandr.h
  The following command line parameters were used:
    /n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/X11/X11-Include/X11/extensions/Xrandr.h
    -p
    -T
    -S
    -d
    -c
    -o
    /n4800/DATEN/Programmierung/mit_GIT/Lazarus/Tutorial/X11/X11-Include/X11/extensions/Xrandr.pp
}

    { Pointers to basic pascal types, inserted by h2pas conversion program.}
    Type
      PLongint  = ^Longint;
      PSmallInt = ^SmallInt;
      PByte     = ^Byte;
      PWord     = ^Word;
      PDWord    = ^DWord;
      PDouble   = ^Double;

    Type
    PAtom  = ^Atom;
    Pbyte  = ^byte;
    Pchar  = ^char;
    PDisplay  = ^Display;
    Pdword  = ^dword;
    Plongint  = ^longint;
    PRotation  = ^Rotation;
    PRRCrtc  = ^RRCrtc;
    PRRMode  = ^RRMode;
    PRROutput  = ^RROutput;
    PRRProvider  = ^RRProvider;
    Psmallint  = ^smallint;
    PTime  = ^Time;
    Pword  = ^word;
    PXEvent  = ^XEvent;
    PXFixed  = ^XFixed;
    PXRRCrtcChangeNotifyEvent  = ^XRRCrtcChangeNotifyEvent;
    PXRRCrtcGamma  = ^XRRCrtcGamma;
    PXRRCrtcInfo  = ^XRRCrtcInfo;
    PXRRCrtcTransformAttributes  = ^XRRCrtcTransformAttributes;
    PXRRModeFlags  = ^XRRModeFlags;
    PXRRModeInfo  = ^XRRModeInfo;
    PXRRMonitorInfo  = ^XRRMonitorInfo;
    PXRRNotifyEvent  = ^XRRNotifyEvent;
    PXRROutputChangeNotifyEvent  = ^XRROutputChangeNotifyEvent;
    PXRROutputInfo  = ^XRROutputInfo;
    PXRROutputPropertyNotifyEvent  = ^XRROutputPropertyNotifyEvent;
    PXRRPanning  = ^XRRPanning;
    PXRRPropertyInfo  = ^XRRPropertyInfo;
    PXRRProviderChangeNotifyEvent  = ^XRRProviderChangeNotifyEvent;
    PXRRProviderInfo  = ^XRRProviderInfo;
    PXRRProviderPropertyNotifyEvent  = ^XRRProviderPropertyNotifyEvent;
    PXRRProviderResources  = ^XRRProviderResources;
    PXRRResourceChangeNotifyEvent  = ^XRRResourceChangeNotifyEvent;
    PXRRScreenChangeNotifyEvent  = ^XRRScreenChangeNotifyEvent;
    PXRRScreenConfiguration  = ^XRRScreenConfiguration;
    PXRRScreenResources  = ^XRRScreenResources;
    PXRRScreenSize  = ^XRRScreenSize;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}



{$ifndef _XRANDR_H_}
{$define _XRANDR_H_}
{$include <X11/extensions/randr.h>}
{$include <X11/extensions/Xrender.h>}
{$include <X11/Xfuncproto.h>}
(* error 
typedef XID RROutput;
in declaration at line 39 *)
    type
      PRRCrtc = ^TRRCrtc;
      TRRCrtc = TXID;

      PRRMode = ^TRRMode;
      TRRMode = TXID;

      PRRProvider = ^TRRProvider;
      TRRProvider = TXID;

      PXRRScreenSize = ^TXRRScreenSize;
      TXRRScreenSize = record
          width : longint;
          height : longint;
          mwidth : longint;
          mheight : longint;
        end;










      PXRRScreenChangeNotifyEvent = ^TXRRScreenChangeNotifyEvent;
      TXRRScreenChangeNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          root : TWindow;
          timestamp : TTime;
          config_timestamp : TTime;
          size_index : TSizeID;
          subpixel_order : TSubpixelOrder;
          rotation : TRotation;
          width : longint;
          height : longint;
          mwidth : longint;
          mheight : longint;
        end;







      PXRRNotifyEvent = ^TXRRNotifyEvent;
      TXRRNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
        end;












      PXRROutputChangeNotifyEvent = ^TXRROutputChangeNotifyEvent;
      TXRROutputChangeNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
          output : TRROutput;
          crtc : TRRCrtc;
          mode : TRRMode;
          rotation : TRotation;
          connection : TConnection;
          subpixel_order : TSubpixelOrder;
        end;












      PXRRCrtcChangeNotifyEvent = ^TXRRCrtcChangeNotifyEvent;
      TXRRCrtcChangeNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
          crtc : TRRCrtc;
          mode : TRRMode;
          rotation : TRotation;
          x : longint;
          y : longint;
          width : dword;
          height : dword;
        end;











      PXRROutputPropertyNotifyEvent = ^TXRROutputPropertyNotifyEvent;
      TXRROutputPropertyNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
          output : TRROutput;
          _property : TAtom;
          timestamp : TTime;
          state : longint;
        end;









      PXRRProviderChangeNotifyEvent = ^TXRRProviderChangeNotifyEvent;
      TXRRProviderChangeNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
          provider : TRRProvider;
          timestamp : TTime;
          current_role : dword;
        end;











      PXRRProviderPropertyNotifyEvent = ^TXRRProviderPropertyNotifyEvent;
      TXRRProviderPropertyNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
          provider : TRRProvider;
          _property : TAtom;
          timestamp : TTime;
          state : longint;
        end;








      PXRRResourceChangeNotifyEvent = ^TXRRResourceChangeNotifyEvent;
      TXRRResourceChangeNotifyEvent = record
          _type : longint;
          serial : dword;
          send_event : TBool;
          display : PDisplay;
          window : TWindow;
          subtype : longint;
          timestamp : TTime;
        end;


function XRRQueryExtension(dpy:PDisplay; event_base_return:Plongint; error_base_return:Plongint):TBool;cdecl;external;
function XRRQueryVersion(dpy:PDisplay; major_version_return:Plongint; minor_version_return:Plongint):TStatus;cdecl;external;
function XRRGetScreenInfo(dpy:PDisplay; window:TWindow):PXRRScreenConfiguration;cdecl;external;
procedure XRRFreeScreenConfigInfo(config:PXRRScreenConfiguration);cdecl;external;

function XRRSetScreenConfig(dpy:PDisplay; config:PXRRScreenConfiguration; draw:TDrawable; size_index:longint; rotation:TRotation; 
               timestamp:TTime):TStatus;cdecl;external;

function XRRSetScreenConfigAndRate(dpy:PDisplay; config:PXRRScreenConfiguration; draw:TDrawable; size_index:longint; rotation:TRotation; 
               rate:smallint; timestamp:TTime):TStatus;cdecl;external;
function XRRConfigRotations(config:PXRRScreenConfiguration; current_rotation:PRotation):TRotation;cdecl;external;
function XRRConfigTimes(config:PXRRScreenConfiguration; config_timestamp:PTime):TTime;cdecl;external;
function XRRConfigSizes(config:PXRRScreenConfiguration; nsizes:Plongint):PXRRScreenSize;cdecl;external;
function XRRConfigRates(config:PXRRScreenConfiguration; sizeID:longint; nrates:Plongint):Psmallint;cdecl;external;
function XRRConfigCurrentConfiguration(config:PXRRScreenConfiguration; rotation:PRotation):TSizeID;cdecl;external;
function XRRConfigCurrentRate(config:PXRRScreenConfiguration):smallint;cdecl;external;
function XRRRootToScreen(dpy:PDisplay; root:TWindow):longint;cdecl;external;

procedure XRRSelectInput(dpy:PDisplay; window:TWindow; mask:longint);cdecl;external;

function XRRRotations(dpy:PDisplay; screen:longint; current_rotation:PRotation):TRotation;cdecl;external;
function XRRSizes(dpy:PDisplay; screen:longint; nsizes:Plongint):PXRRScreenSize;cdecl;external;
function XRRRates(dpy:PDisplay; screen:longint; sizeID:longint; nrates:Plongint):Psmallint;cdecl;external;
function XRRTimes(dpy:PDisplay; screen:longint; config_timestamp:PTime):TTime;cdecl;external;


function XRRGetScreenSizeRange(dpy:PDisplay; window:TWindow; minWidth:Plongint; minHeight:Plongint; maxWidth:Plongint; 
               maxHeight:Plongint):TStatus;cdecl;external;
procedure XRRSetScreenSize(dpy:PDisplay; window:TWindow; width:longint; height:longint; mmWidth:longint; 
                mmHeight:longint);cdecl;external;
    type
      PXRRModeFlags = ^TXRRModeFlags;
      TXRRModeFlags = dword;

      PXRRModeInfo = ^TXRRModeInfo;
      TXRRModeInfo = record
          id : TRRMode;
          width : dword;
          height : dword;
          dotClock : dword;
          hSyncStart : dword;
          hSyncEnd : dword;
          hTotal : dword;
          hSkew : dword;
          vSyncStart : dword;
          vSyncEnd : dword;
          vTotal : dword;
          name : Pchar;
          nameLength : dword;
          modeFlags : TXRRModeFlags;
        end;

      PXRRScreenResources = ^TXRRScreenResources;
      TXRRScreenResources = record
          timestamp : TTime;
          configTimestamp : TTime;
          ncrtc : longint;
          crtcs : PRRCrtc;
          noutput : longint;
          outputs : PRROutput;
          nmode : longint;
          modes : PXRRModeInfo;
        end;

function XRRGetScreenResources(dpy:PDisplay; window:TWindow):PXRRScreenResources;cdecl;external;
procedure XRRFreeScreenResources(resources:PXRRScreenResources);cdecl;external;
    type
      PXRROutputInfo = ^TXRROutputInfo;
      TXRROutputInfo = record
          timestamp : TTime;
          crtc : TRRCrtc;
          name : Pchar;
          nameLen : longint;
          mm_width : dword;
          mm_height : dword;
          connection : TConnection;
          subpixel_order : TSubpixelOrder;
          ncrtc : longint;
          crtcs : PRRCrtc;
          nclone : longint;
          clones : PRROutput;
          nmode : longint;
          npreferred : longint;
          modes : PRRMode;
        end;

function XRRGetOutputInfo(dpy:PDisplay; resources:PXRRScreenResources; output:TRROutput):PXRROutputInfo;cdecl;external;
procedure XRRFreeOutputInfo(outputInfo:PXRROutputInfo);cdecl;external;
function XRRListOutputProperties(dpy:PDisplay; output:TRROutput; nprop:Plongint):PAtom;cdecl;external;
    type
      PXRRPropertyInfo = ^TXRRPropertyInfo;
      TXRRPropertyInfo = record
          pending : TBool;
          range : TBool;
          immutable : TBool;
          num_values : longint;
          values : Plongint;
        end;
